[VF-53] fix dark mode button in mobile menu
[VF-53] fix mobile header

--- a/src/components/AppFooter/components/DarkModeToggle.css
+++ b/src/components/AppFooter/components/DarkModeToggle.css
@@ -37,7 +37,6 @@
 }
 
 .darkModeToggle:checked:after {
-    left: 32px;
     background-color: #222;
     padding-left: 5px;
     content: '\1F31B';
